<resources>
    <string name="app_name">Emergency Contact App</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="relationship">Relationship</string>
    <string name="cancel">Close</string>
    <string name="save">Save</string>
    <string name="submit">open contact add fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="confirm_message">Continue to your Emergency Contacts ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="android_floating_action_button">Android Floating Action Button</string>
    <string name="no_contacts_added">No contacts added</string>
    <string name="close_button">close button</string>
</resources>
