<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/contact_add_fragment"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/action_buttons"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreyLight"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="25sp"
                android:textColor="@color/colorOrange"/>

            <Button
                android:id="@+id/save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textSize="25sp"
                android:textColor="@color/colorOrange"/>

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_below="@id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="30sp"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/phone"
        android:layout_below="@id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textSize="30sp"
        android:inputType="phone"
        android:textColor="@color/colorBlack"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/email"
        android:layout_below="@id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="30sp"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorBlack"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/relationship"
        android:layout_below="@id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/relationship"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />

</RelativeLayout>