<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/colorGreyLight">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorRedDark">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/app_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/qn5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/confirm_message"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />



                </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginBottom="20dp">

                   <Button
                       android:id="@+id/btnYes"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_marginLeft="30dp"
                       android:layout_marginRight="30dp"
                       android:layout_weight="1"
                       android:text="@string/yes"
                       android:textColor="@color/colorWhite"
                       android:background="@drawable/accept_button"
                       android:layout_gravity="center_horizontal"/>

                   <Button
                       android:id="@+id/btnNo"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_marginLeft="30dp"
                       android:layout_marginRight="30dp"
                       android:layout_weight="1"
                       android:text="@string/no"
                       android:textColor="@color/colorWhite"
                       android:background="@drawable/failed_button"
                       android:layout_gravity="center_horizontal"/>

               </LinearLayout>

            </LinearLayout>

    </RelativeLayout>
